swiper js z-index bug fix

--- a/src/components/testimonial/Testimonial.css
+++ b/src/components/testimonial/Testimonial.css
@@ -1,11 +1,7 @@
 .testimonials_container {
   width: 40%;
-  position: absolute;
-  z-index: -1;
-  left: 30%;
-  
+  z-index: 0 !important;
 }
-
 .avatar {
   width: 4rem;
   aspect-ratio: 1/1;
@@ -15,7 +11,7 @@
   border: 0.4rem solid var(--color-primary-variant);
 }
 
-.testimonials {
+.testimonial {
   background: var(--color-bg-variant);
   text-align: center;
   padding: 2rem;
